<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/province" />
            <Spinner
                android:id="@+id/spr_province"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city" />
            <Spinner
                android:id="@+id/spr_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/county" />
            <Spinner
                android:id="@+id/spr_county"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birth" />
            <Button
                android:id="@+id/btn_birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/gender" />
            <RadioGroup
                android:id="@+id/radio_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:checkedButton="@+id/male">
                <RadioButton
                    android:id="@+id/male"
                    android:text="@string/male" />
                <RadioButton
                    android:id="@+id/female"
                    android:text="@string/female" />
            </RadioGroup>
        </TableRow>
    </TableLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edt_id_num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_generate"
            android:layout_weight="1.0"
            android:singleLine="true"
            android:focusable="false" />
        <Button
            android:id="@+id/btn_generate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/generate" />
        </LinearLayout>
</LinearLayout>
